fix: align items

--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,6 @@ body{
     text-align: center;
 }
 
-
-
 .header-top .logo,
 .header-top nav,
 .header-top .login{
@@ -119,6 +117,10 @@ p{
     margin: 30px;
 }
 
+nav{
+    display: flex;
+    justify-content: space-around;
+}
 /*main*/
 section{
     padding: 50px;
@@ -206,6 +208,7 @@ footer > .container{
     display: flex;
     width: 70%;
     min-height: 400px;
+    margin-top: 4px;
 }
 
 .col-inner{
